--- a/download.html
+++ b/download.html
@@ -1,3 +1,4 @@
 <!doctype html>
+<title> download me </title>
 <link rel="stylesheet" href="stylesheet.css">
 <a class="huge" href="meatbaby.png" download="meatbaby.png" >Download </a>
